@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = bstring src doc www conf debian
-EXTRA_DIST = CREDITS coova-chilli.spec
+SUBDIRS = bstring src doc www conf debian distro
+EXTRA_DIST = CREDITS 
 if WITH_MINIPORTAL
 SUBDIRS += miniportal
 endif
