@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.57)
-AC_INIT(coova-chilli, 1.2.3-rc1, support@coova.com)
+AC_INIT(coova-chilli, 1.2.3, support@coova.com)
 AC_CONFIG_SRCDIR([src/cmdline.c])
 
 AM_INIT_AUTOMAKE
@@ -327,6 +327,8 @@ AC_CONFIG_FILES([Makefile
 		 conf/Makefile 
 		 debian/Makefile
 		 miniportal/Makefile
-		 coova-chilli.spec])
+		 distro/Makefile
+		 distro/suse/coova-chilli.spec
+		 distro/redhat/coova-chilli.spec])
 
 AC_OUTPUT
